unpackaged/objects/Deployment_Status_Report__c.object
<CustomObject>
  <description>DEPLOYMENT</description>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Deployment Status Report</relationshipLabel>
    <relationshipName>Deployment_Status_Report</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Date_for_sending_out_LMS_password__c</fullName>
    <label>Date for sending out LMS password</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Decide_to_buy_Data_com_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to buy Data.com info</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Deployment_Level__c</fullName>
    <formula>if( 

or( 
text(Status__c)="Deployment Initiation", text(Status__c)="Business Orientation"), 1, 

if( 
text(Status__c)="Start-up &amp; Design", 2, 

if( 
and(text(Status__c)="Training &amp; GO-Live", Go_Live_Date__c &gt; TODAY()), 3, 

if( Go_Live_Date__c &lt;= TODAY(),4,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Deployment_Status_Description__c</fullName>
    <label>Deployment status description</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Deployment_Status__c</fullName>
    <formula>if( 
or(
text(Status__c)="Deployment Initiation", text(Status__c)="Business Orientation"), Image("https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000003gTQT","Business Orientation",30,30), 

if(
text(Status__c)="Start-up &amp; Design", Image("https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000003gTQO","Start-up",30,40),
 
if(
and(text(Status__c)="Training &amp; GO-Live", Go_Live_Date__c &gt; TODAY()), Image("https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000003gTQY","Training",30,30),

if(
Go_Live_Date__c &lt;= TODAY(), Image("https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000003gTQJ","Live",30,30),""))))</formula>
    <label>Deployment status</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>For_Management_Attention_Support__c</fullName>
    <label>For management attention &amp; support</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Go_Live_Date__c</fullName>
    <label>GO LIVE date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>LM_Translation_Cost__c</fullName>
    <label>LMS Translation Cost in €</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Basic</fullName>
          <default>true</default>
          <label>Basic</label>
        </value>
        <value>
          <fullName>Standard</fullName>
        </value>
        <value>
          <fullName>Extended</fullName>
        </value>
        <value>
          <fullName>Advanced</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Next_Steps_Ongoing_Activities__c</fullName>
    <label>Next Steps/On-going Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Executive One SFDC Meeting</fullName>
        </value>
        <value>
          <fullName>Change Mngt &amp; Bus Orientation</fullName>
        </value>
        <value>
          <fullName>Project Brief Development</fullName>
        </value>
        <value>
          <fullName>Start-up Meeting</fullName>
        </value>
        <value>
          <fullName>Bus Req &amp; Gap Workshop</fullName>
        </value>
        <value>
          <fullName>Project Meeting 1</fullName>
        </value>
        <value>
          <fullName>ETM &amp; Legacy data Migration</fullName>
        </value>
        <value>
          <fullName>Project Meeting 2</fullName>
        </value>
        <value>
          <fullName>Project Meeting 3</fullName>
        </value>
        <value>
          <fullName>Train the Trainer\Superuser Training</fullName>
        </value>
        <value>
          <fullName>Translations</fullName>
        </value>
        <value>
          <fullName>Project meeting 4</fullName>
        </value>
        <value>
          <fullName>Country Deploy Status</fullName>
        </value>
        <value>
          <fullName>End-user Training</fullName>
        </value>
        <value>
          <fullName>Legacy Data Load</fullName>
        </value>
        <value>
          <fullName>GO LIVE</fullName>
        </value>
        <value>
          <fullName>Post-go live meeting</fullName>
        </value>
        <value>
          <fullName>Follow-up</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Sales</fullName>
          <default>true</default>
          <label>Sales</label>
        </value>
        <value>
          <fullName>Service</fullName>
        </value>
        <value>
          <fullName>Marketing</fullName>
        </value>
        <value>
          <fullName>BI-Wave</fullName>
        </value>
        <value>
          <fullName>IOT</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Project_Health__c</fullName>
    <label>Project health</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>GREEN/ON PLAN</fullName>
        </value>
        <value>
          <fullName>YELLOW/AT RISK</fullName>
        </value>
        <value>
          <fullName>RED/OVERDUE</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Requests__c</fullName>
    <description>Requests from country</description>
    <label>Requests</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>SalesBasicLevel_copy__c</fullName>
    <label>SalesBasicLevel_copy</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Status_Health__c</fullName>
    <formula>if(
text( Project_Health__c )="GREEN/ON PLAN",Image("https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000000yzK1","On Plan",16,16),
if(text( Project_Health__c )="YELLOW/AT RISK",Image("https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000000zblq","At Risk",16,16),
if(text( Project_Health__c )="RED/OVERDUE",Image("https://emea.salesforce.com/servlet/servlet.FileDownload?file=01520000000yzK6","Overdue",16,16),"")))</formula>
    <label>Project health</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Status_Report_Date__c</fullName>
    <label>Status report date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Created</fullName>
        </value>
        <value>
          <fullName>Deployment Initiation</fullName>
        </value>
        <value>
          <fullName>Business Orientation</fullName>
        </value>
        <value>
          <fullName>Start-up &amp; Design</fullName>
        </value>
        <value>
          <fullName>Training &amp; GO-Live</fullName>
        </value>
        <value>
          <fullName>Improve &amp; Follow-Up</fullName>
        </value>
        <value>
          <fullName>Postponed</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Willing_to_take_LMS_Translation_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to  take LMS translation cost</label>
    <type>Checkbox</type>
  </fields>
  <label>Deployment Status Report</label>
  <nameField>
    <displayFormat>DSR-{0000}</displayFormat>
    <label>Status Report #</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Deployment Status Report</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>